<resources>
    <string name="app_name">ExpressDelivery</string>
    <string name="home">Home</string>
    <string name="delivered">Delivered</string>
    <string name="stats">Stats</string>
    <string name="back">Back</string>
    <string name="finished">Finished</string>

    <!-- Home Fragment -->
    <string name="newOrders">New Orders</string>
    <string name="inProgress">In Progress</string>
    <string name="id">ID</string>
    <string name="description">Description</string>

    <!-- New Order and Finish Order Activities -->
    <string name="orderDetails">Order Details</string>
    <string name="destiny">Destination</string>
    <string name="contact">Contact</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="finish">Finish</string>

    <!-- Static Data for Home Fragment -->
    <string-array name="ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="descriptions">
        <item>1 Ben-U-Ron, 1 Voltaren </item>
        <item>2 Favicon </item>
        <item>3 Detain </item>
        <item>2 Bren </item>
        <item>1 Stereopsis, 2 Ben-U-Ron </item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_short">Login</string>
    <string name="action_register_short">Register</string>
    <string name="NoRiderLogged">No Rider logged</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>