<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveredActivity">

    <LinearLayout
        android:id="@+id/LinearLayout20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout21"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/orderDetails"
            android:textAlignment="center"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout22"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/id" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout23"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout34"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/destiny" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout25"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/contact" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivered"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="34sp" />
    </LinearLayout>

</RelativeLayout>