<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishOrderActivity">

    <LinearLayout
        android:id="@+id/LinearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout11"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/orderDetails"
            android:textAlignment="center"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout12"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/id" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout13"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout14"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/destiny" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout15"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/contact" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:backgroundTint="#0066FF"
            android:text="@string/finish" />
    </LinearLayout>

</RelativeLayout>